till add to cart complete

--- a/src/app/components/Footer/style.css
+++ b/src/app/components/Footer/style.css
@@ -33,7 +33,7 @@
   flex-wrap: wrap;
 }
 .footer-third ul {
-  padding: 5px 0px;
+  padding: 10px 0px;
   margin: 0px;
   display: flex;
   -webkit-box-align: center;
@@ -47,9 +47,10 @@
   display: flex;
   -webkit-box-align: center;
   align-items: center;
-  color: black;
-  font-weight: 300px;
-  font-size: 0.875rem;
+  color: var(--black);
+  font-weight: var(--fw-300);
+  font-size: var(--fs-14);
+  line-height: var(--lh-16);
   align-items: center;
 }
 .cardsss {
@@ -64,12 +65,11 @@
   justify-content: space-between;
   -webkit-box-align: center;
   align-items: center;
-  border-bottom: 1px solid #dde0e7;
   width: 100%;
   flex-wrap: wrap;
 }
 .footer-fourth ul {
-  padding: 5px 0px;
+  padding: 15px 0px;
   margin: 0px;
   display: flex;
   -webkit-box-align: center;
@@ -78,16 +78,25 @@
 }
 .footer-fourth li {
   list-style: none;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   text-decoration: none;
   display: flex;
   -webkit-box-align: center;
   align-items: center;
-  color: #757575;
-  font-size: 0.875rem;
+  color: var(--footer-color);
+  font-size: var(--fs-12);
+  line-height: var(--lh-10);
+  font-weight: var(--fw-300);
   gap: 5px;
 }
-
+.footer-last li {
+  padding-bottom: 30px;
+  color: var(--footer-color);
+  font-size: var(--fs-16);
+  line-height: var(--lh-18);
+  font-weight: var(--fw-300);
+  gap: 5px;
+}
 .iconss {
   width: 20px;
   height: auto;
