--- a/src/app/components/CategoryTopbar/style.css
+++ b/src/app/components/CategoryTopbar/style.css
@@ -1,18 +1,3 @@
-.header {
-  height: 363px;
-  background-color: var(--header-bg);
-  background-image: url("/assets/Images/header-bg.jpg");
-  background-position: center center;
-  background-size: cover;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: end;
-  justify-content: flex-end;
-  padding-bottom: 20px;
-}
 .topbar-container {
   position: fixed;
   top: 0px;
@@ -20,15 +5,6 @@
   width: 100%;
   backdrop-filter: blur(8px);
   z-index: 3;
-}
-
-.topbar {
-  height: 80px;
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  align-items: center;
-  padding: 0px 24px;
-  background-color: var(--header-bg);
 }
 
 .topbar-second {
@@ -90,25 +66,6 @@
   justify-self: center;
   text-align: center;
   color: var(--white);
-}
-.market-title {
-  margin: 0px;
-  text-align: center;
-  font-weight: var(--fw-600);
-  font-size: var(--fs-32);
-  color: var(--white);
-  line-height: var(--lh-36);
-}
-.more-info {
-  background: transparent;
-  border: none;
-  padding: 0px;
-  cursor: pointer;
-  position: relative;
-  font-weight: var(--fw-400);
-  font-size: var(--fs-16);
-  color: var(--white);
-  line-height: var(--lh-18);
 }
 
 .topbar-right {
@@ -203,11 +160,12 @@
   width: 70%;
   position: relative;
 }
-.search-box-second {
-  width: 44%;
+.search-box-second-category {
+  width: 100%;
   position: relative;
 }
-.search-box span {
+
+.search-box-second-category span {
   position: absolute;
   left: 14px;
   top: 50%;
@@ -217,17 +175,8 @@
   pointer-events: none;
   margin-top: 3px;
 }
-.search-box-second span {
-  position: absolute;
-  left: 14px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 20px;
-  color: #1f2c3a;
-  pointer-events: none;
-  margin-top: 3px;
-}
-.search-box input {
+
+.search-box-second-category input {
   height: 48px;
   width: 100%;
   border: 1px solid var(--border-color);
@@ -241,24 +190,7 @@
   outline: none;
 }
 
-.search-box-second input {
-  height: 48px;
-  width: 100%;
-  border: 1px solid var(--border-color);
-  padding: 4px 11px 4px 40px;
-  color: #1f2c3a;
-  font-size: var(--fs-16);
-  font-weight: var(--fw-400);
-  line-height: var(--lh-16);
-  border-radius: var(--br-8);
-  transition: all 0.2s;
-  outline: none;
-}
-.search-box input:hover {
-  border: 1px solid var(--peace);
-  border-radius: var(--br-8);
-}
-.search-box-second input:hover {
+.search-box-second-category input:hover {
   border: 1px solid var(--peace);
   border-radius: var(--br-8);
 }
