--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,28 +13,62 @@ body {
   font-weight: 300;
 }
 :root {
-  /* Colors */
-  --main-color: 236, 178, 100;
-  --link-color: 236, 178, 100;
-  --left-menu-color: 255, 255, 255;
-  --left-menu-link-color: 45, 41, 38;
-  --delivery-buttons-color: 0, 0, 0;
-  --footer-link-color: 117, 117, 117;
-  --header-color: 0, 0, 0;
+  --white: #ffffff;
+  --peace: #ecb264;
+  --gray: #9ca7b5;
+  --charcoal: #5b5d64;
+  --border-color: #dfe3e9;
+  --navy-blue: #3c4d5f;
+  --light-gray: #f5f5f5;
+  --text-color: #1f2c3a;
+  --black: #000000;
+  --text-gray: #64717e;
+  --footer-color: #757575;
+  --header-bg: #0000004d;
+  --footer-last: #505050;
+  --charcoal-text: #595959;
+
+  --fs-10: 10px;
+  --fs-12: 12px;
+  --fs-13: 0.8125rem;
+  --fs-14: 0.875rem;
+  --fs-15: 15px;
+  --fs-16: 1rem;
+  --fs-18: 18px;
+  --fs-19: 19px;
+  --fs-20: 20px;
+  --fs-22: 22px;
+  --fs-30: 30px;
+  --fs-32: 2rem;
+
+  --fw-300: 300;
+  --fw-400: 400;
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
+
+  --lh-10: 0.625rem;
+  --lh-12: 0.75rem;
+  --lh-14: 0.875rem;
+  --lh-16: 1rem;
+  --lh-18: 1.125rem;
+  --lh-20: 1.25rem;
+  --lh-22: 1.375rem;
+  --lh-24: 1.5rem;
+  --lh-26: 1.625rem;
+  --lh-28: 1.75rem;
+  --lh-30: 1.875rem;
+  --lh-32: 2rem;
+  --lh-34: 2.125rem;
+  --lh-36: 2.25rem;
+  --lh-38: 2.375rem;
+  --lh-40: 2.5rem;
+  --lh-42: 2.625rem;
+
+  --br-8: 0.5rem;
+  --br-6: 6px;
+
   --default-image-placeholder: url(https://cdn.localexpress.io/static/image-placeholder.png);
-
-  --vh: 1vh;
-  --base-skeleton-color: #dbdbdb;
-  --highlight-color: #f5f5f5;
-
-  /* Fonts */
-  --font-family-main: "Arial", sans-serif;
-
-  /* Font Sizes */
-  --fs-h1: 2.5rem; /* ~40px */
-  --fs-h2: 1.75rem; /* ~28px */
-  --fs-body: 1rem; /* 16px */
-  --fs-btn: 1.125rem; /* 18px */
 
   --le-animation-duration-slow: 0.3s;
   --le-animation-duration-base: 0.2s;
